--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     body {
       font-family: Arial, sans-serif;
       margin: 30px;
+      position: relative;
     }
 
     h1 {
@@ -83,7 +84,7 @@
       visibility: hidden;
       opacity: 0;
       width: 280px;
-      background-color: rgba(0,0,0,0.65);
+      background-color: rgba(0, 0, 0, 0.65);
       color: #fff;
       text-align: left;
       border-radius: 6px;
@@ -94,7 +95,7 @@
       /* 按鈕下方 */
       left: 0;
       transition: opacity 0.3s;
-      font-size: 16px;
+      font-size: 13px;
       line-height: 1.5;
     }
 
@@ -102,42 +103,49 @@
       visibility: visible;
       opacity: 1;
     }
+
+    .main-content {
+      margin-top: 80px;
+      /* 👈 你可以自己微調，例如 60px / 100px */
+    }
   </style>
 </head>
 
 <body>
-  <h1>A1 / A2 類車禍事故統計指標</h1>
+  <div class="main-content">
+    <h1>A1 / A2 類車禍事故統計指標</h1>
 
 
-  <!-- 說明按鈕 -->
-  <div class="info-btn">ⓘ 什麼是 A1/A2 類車禍？
-    <div class="tooltip">
-      <p><b>A1 類車禍：</b> 車禍當下或車禍發生 24 小時內有人死亡。</p>
-      <p><b>A2 類車禍：</b> 車禍有人員受傷或車禍發生 24 小時後有人死亡。</p>
+    <!-- 說明按鈕 -->
+    <div class="info-btn">ⓘ 什麼是 A1/A2 類車禍？
+      <div class="tooltip">
+        <p><b>A1 類車禍：</b> 車禍當下或車禍發生 24 小時內有人死亡。</p>
+        <p><b>A2 類車禍：</b> 車禍有人員受傷或車禍發生 24 小時後有人死亡。</p>
+      </div>
     </div>
+
+
+    <div class="container">
+      <!-- A1 -->
+      <div class="panel">
+        <h2>🔵 A1 類</h2>
+        <div id="A1_lastMonth" class="indicator">讀取中...</div>
+        <div id="A1_prevYear" class="indicator">讀取中...</div>
+        <div id="A1_prevMonth" class="indicator">讀取中...</div>
+      </div>
+
+      <!-- A2 -->
+      <div class="panel">
+        <h2>🟠 A2 類</h2>
+        <div id="A2_lastMonth" class="indicator">讀取中...</div>
+        <div id="A2_prevYear" class="indicator">讀取中...</div>
+        <div id="A2_prevMonth" class="indicator">讀取中...</div>
+        <div id="A2_warning" class="warning"></div>
+      </div>
+    </div>
+
+    <div class="note" id="note"></div>
   </div>
-
-
-  <div class="container">
-    <!-- A1 -->
-    <div class="panel">
-      <h2>🔵 A1 類</h2>
-      <div id="A1_lastMonth" class="indicator">讀取中...</div>
-      <div id="A1_prevYear" class="indicator">讀取中...</div>
-      <div id="A1_prevMonth" class="indicator">讀取中...</div>
-    </div>
-
-    <!-- A2 -->
-    <div class="panel">
-      <h2>🟠 A2 類</h2>
-      <div id="A2_lastMonth" class="indicator">讀取中...</div>
-      <div id="A2_prevYear" class="indicator">讀取中...</div>
-      <div id="A2_prevMonth" class="indicator">讀取中...</div>
-      <div id="A2_warning" class="warning"></div>
-    </div>
-  </div>
-
-  <div class="note" id="note"></div>
 
   <script>
     // 🎯 計算今天的前一個月
@@ -243,5 +251,3 @@
 </body>
 
 </html>
-
-
