--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>A1/A2 車禍指標</title>
+  <title>台南市 A1 / A2 車禍事故指標</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
   <style>
     body {
@@ -12,8 +12,8 @@
     }
 
     h1 {
-      margin-bottom: 20px;
       text-align: center;
+      margin-bottom: 20px;
     }
 
     .container {
@@ -24,8 +24,8 @@
     }
 
     .panel {
-      flex: 1 1 400px;
-      max-width: 500px;
+      flex: 1 1 420px;
+      max-width: 600px;
       border: 1px solid #ccc;
       border-radius: 8px;
       padding: 20px;
@@ -33,12 +33,12 @@
 
     h2 {
       margin-top: 0;
-      color: #333;
     }
 
     .indicator {
-      margin-bottom: 15px;
+      margin: 14px 0;
       font-size: 18px;
+      line-height: 1.6;
     }
 
     .up {
@@ -52,63 +52,139 @@
     }
 
     .note {
-      margin-top: 30px;
+      margin-top: 20px;
       font-size: 14px;
       color: gray;
       text-align: center;
     }
 
     .warning {
-      color: gray;
       margin-top: 10px;
+      color: gray;
       font-size: 15px;
     }
 
+    .badge {
+      display: inline-block;
+      padding: 2px 10px;
+      border-radius: 999px;
+      font-weight: 700;
+      color: #fff;
+      margin-left: 6px;
+      font-size: 16px;
+    }
+
+    /* 紅底 */
+    .badge.up {
+      background: rgba(211, 47, 47, 0.85);
+    }
+
+    /* 綠底 */
+    .badge.down {
+      background: rgba(56, 142, 60, 0.85);
+    }
+
+    /* 灰底 */
+    .badge.zero {
+      background: rgba(120, 120, 120, 0.8);
+    }
+
+    /* + 紅色 */
+    .delta-up {
+      color: #d32f2f;
+      font-weight: bold;
+    }
+
+    /* - 綠色 */
+    .delta-down {
+      color: #388e3c;
+      font-weight: bold;
+    }
+
+    /* +0 灰色 */
+    .delta-zero {
+      color: #777;
+      font-weight: bold;
+    }
+
+    /* ===== i 提示鈕（原本版本） ===== */
+    .info-icon {
+      position: relative;
+      top: -2px;
+      /* ⭐ 只微調，不要大幅位移 */
+      margin-right: 2px;
+    }
 
     .info-btn {
-      position: absolute;
-      top: 15px;
-      left: 15px;
-      background: white;
+      position: relative;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      margin-left: 8px;
+
+      background: #ffffff;
       color: rgb(71, 134, 235);
-      padding: 8px 12px;
-      border-radius: 20px;
-      cursor: pointer;
+      padding: 6px 10px;
+      border-radius: 999px;
+
       font-size: 18px;
+      /* ⭐ i 本身也稍微放大 */
       font-weight: bold;
-      display: inline-block;
+      cursor: pointer;
+      user-select: none;
     }
 
+    /* 👈 一開始只顯示 i */
     .info-text {
       display: none;
-      /* 👈 預設不顯示文字 */
-      margin-left: 6px;
-      font-size: 14px;
+
+      font-size: 16px;
+      /* ⭐ 放大 */
+      font-weight: 600;
+
+      padding: 4px 10px;
+      border-radius: 12px;
+
+      /* ⭐ 藍色外框 */
+      border: 2px solid rgb(71, 134, 235);
+      color: rgb(71, 134, 235);
+      background: #ffffff;
     }
 
-    .info-btn .tooltip {
-      visibility: hidden;
-      opacity: 0;
-      width: 280px;
-      background-color: rgba(0, 0, 0, 0.65);
-      color: #fff;
-      text-align: left;
-      border-radius: 6px;
-      padding: 10px;
-      position: absolute;
-      z-index: 10;
-      top: 40px;
-      /* 按鈕下方 */
-      left: 0;
-      transition: opacity 0.3s;
-      font-size: 13px;
-      line-height: 1.5;
-    }
-
+    /* 👈 滑上去才顯示「什麼是 A1/A2 類事故？」 */
     .info-btn:hover .info-text {
       display: inline;
     }
 
+    /* ===== 說明框 ===== */
+    .info-btn .tooltip {
+      visibility: hidden;
+      opacity: 0;
+
+      width: 360px;
+      background-color: rgba(0, 0, 0, 0.75);
+      color: #fff;
+      border-radius: 12px;
+      padding: 16px;
+
+      position: absolute;
+      top: calc(100% + 8px);
+      /* ⭐ 出現在整排下方 */
+      left: 0;
+      /* ⭐ 與 i 對齊 */
+      transform: none;
+      /* ⭐ 拿掉 translateY */
+
+      z-index: 10;
+
+      font-size: 16px;
+      /* 稍微再大一點 */
+      line-height: 1.7;
+
+      transition: opacity .2s ease;
+    }
+
+    /* 👈 滑到整個 info-btn 才顯示說明框 */
     .info-btn:hover .tooltip {
       visibility: visible;
       opacity: 1;
@@ -117,14 +193,11 @@
 </head>
 
 <body>
-  <h1>A1 / A2 類車禍事故統計指標</h1>
+  <h1>台南市 A1 / A2 類車禍事故指標</h1>
 
-
-  <!-- 說明按鈕 -->
   <div class="info-btn">
     <span class="info-icon">ⓘ</span>
     <span class="info-text">什麼是 A1/A2 類車禍？</span>
-
     <div class="tooltip">
       <strong>A1類：</strong>車禍當下或車禍發生 24 小時內有人死亡。<br>
       <strong>A2類：</strong>車禍有人員受傷或車禍發生 24 小時後有人死亡。<br>
@@ -132,21 +205,20 @@
   </div>
 
 
-
   <div class="container">
     <!-- A1 -->
     <div class="panel">
-      <h2>🔵 A1 類</h2>
+      <h2>🔵 A1 類（死亡事故）</h2>
       <div id="A1_lastMonth" class="indicator">讀取中...</div>
-      <div id="A1_prevYear" class="indicator">讀取中...</div>
+      <div id="A1_prev3yAvg" class="indicator">讀取中...</div>
       <div id="A1_prevMonth" class="indicator">讀取中...</div>
     </div>
 
     <!-- A2 -->
     <div class="panel">
-      <h2>🟠 A2 類</h2>
+      <h2>🟠 A2 類（受傷事故）</h2>
       <div id="A2_lastMonth" class="indicator">讀取中...</div>
-      <div id="A2_prevYear" class="indicator">讀取中...</div>
+      <div id="A2_prev3yAvg" class="indicator">讀取中...</div>
       <div id="A2_prevMonth" class="indicator">讀取中...</div>
       <div id="A2_warning" class="warning"></div>
     </div>
@@ -155,105 +227,183 @@
   <div class="note" id="note"></div>
 
   <script>
-    // 🎯 計算今天的前一個月
-    function getTargetMonth() {
-      const today = new Date();
-      let year = today.getFullYear();
-      let month = today.getMonth(); // getMonth() 0=1月 → 這就是「上個月」
-      if (month === 0) { // 如果今天是1月，往前就是去年12月
-        month = 12;
-        year -= 1;
-      }
-      return { year, month };
+    /* ===== 取前兩個月 ===== */
+    function getTargetMonth(offset = 2) {
+      const d = new Date();
+      d.setDate(1);
+      d.setMonth(d.getMonth() - offset);
+      return { year: d.getFullYear(), month: d.getMonth() + 1 };
+    }
+
+    function findRecord(year, month, data) {
+      return data.find(d => d.year === year && d.month === month) || null;
     }
 
     function getPrevMonth(year, month, data) {
-      let prevYear = year;
-      let prevMonth = month - 1;
-      if (prevMonth === 0) {
-        prevMonth = 12;
-        prevYear -= 1;
-      }
-      return data.find(d => d.year === prevYear && d.month === prevMonth) || null;
+      let y = year, m = month - 1;
+      if (m === 0) { m = 12; y -= 1; }
+      return findRecord(y, m, data);
     }
 
-    function getPrevYearSameMonth(year, month, data) {
-      return data.find(d => d.year === year - 1 && d.month === month) || null;
+    function getPrev3yAvg(year, month, data) {
+      const years = [year - 1, year - 2, year - 3];
+      const vals = data
+        .filter(d => d.month === month && years.includes(d.year))
+        .map(d => d.count)
+        .filter(v => Number.isFinite(v));
+
+      if (!vals.length) return null;
+      return vals.reduce((a, b) => a + b, 0) / vals.length;
     }
 
-    function formatChange(curr, prev) {
-      if (!prev || prev.count === 0) return "⚠ 無資料";
-      const diff = curr.count - prev.count;
-      const rate = ((diff) / prev.count * 100).toFixed(1);
-      if (diff > 0) return `<span class="up">▲ ${rate}%</span>`;
-      if (diff < 0) return `<span class="down">▼ ${rate}%</span>`;
-      return `<span>0%</span>`;
+    function formatDeltaColored(curr, base) {
+      if (!Number.isFinite(base)) return "";
+      const diff = curr - base;
+
+      // 取到小數 1 位
+      const diffText = diff.toFixed(1);
+
+      if (diff > 0) return `<span class="delta-up">+${diffText}</span>`;
+      if (diff < 0) return `<span class="delta-down">${diffText}</span>`;
+
+      // ✅ diff = 0 的情況：+0.0 用灰色
+      return `<span class="delta-zero">+0.0</span>`;
     }
 
-    function processData(raw, prefix) {
-      const data = [];
-      raw.forEach(d => {
-        const year = parseInt((d["發生年度"] || "").toString().trim(), 10);
-        const month = parseInt((d["發生月份"] || "").toString().trim(), 10);
-        const count = parseInt((d["件數"] || "").toString().trim(), 10);
-        if (isNaN(year) || isNaN(month) || isNaN(count)) return;
-        data.push({ year, month, count });
-      });
 
-      data.sort((a, b) => (a.year * 100 + a.month) - (b.year * 100 + b.month));
+    // ✅ 前一月：保留你之前要的「膠囊百分比」
+    function formatChangeBadge(curr, prev) {
+      if (!Number.isFinite(prev) || prev === 0) return `<span class="badge zero">無資料</span>`;
+      const diff = curr - prev;
+      const rate = (diff / prev * 100);
+      const rateText = `${Math.abs(rate).toFixed(1)}%`;
 
-      const target = getTargetMonth();
-      const latest = data.find(d => d.year === target.year && d.month === target.month);
+      if (diff > 0) return `<span class="badge up">▲ ${rateText}</span>`;
+      if (diff < 0) return `<span class="badge down">▼ ${rateText}</span>`;
+      return `<span class="badge zero">0%</span>`;
+    }
+
+    // ✅ 三前年同月平均：你要的純文字百分比（不要▲▼、不要膠囊）
+    function formatRateText(curr, base) {
+      if (!Number.isFinite(base) || base === 0) return "⚠ 無資料";
+      const diff = curr - base;
+      const rate = (diff / base * 100);
+      // 你示例是 0%（其實也可以顯示 0.0% 你看要不要）
+      return `${rate.toFixed(1)}%`;
+    }
+
+    function render(prefix, data) {
+      const target = getTargetMonth(2);
+      const latest = findRecord(target.year, target.month, data);
 
       if (!latest) {
-        document.getElementById(`${prefix}_lastMonth`).innerHTML = `⚠ ${target.year}/${target.month} 沒有資料`;
+        document.getElementById(`${prefix}_lastMonth`).innerHTML = "⚠ 無資料";
+        document.getElementById(`${prefix}_prev3yAvg`).innerHTML = "⚠ 無資料";
+        document.getElementById(`${prefix}_prevMonth`).innerHTML = "⚠ 無資料";
         return;
       }
 
-      const prevMonth = getPrevMonth(latest.year, latest.month, data);
-      const prevYearSameMonth = getPrevYearSameMonth(latest.year, latest.month, data);
+      const curr = latest.count;
 
+      // 前一月
+      const prev = getPrevMonth(latest.year, latest.month, data);
+      const prevCount = prev ? prev.count : NaN;
+
+      // 前三年同月平均
+      const avg3y = getPrev3yAvg(latest.year, latest.month, data); // 你原本回傳 avg (number) 或 null
+
+      // 1) 統計月份
       document.getElementById(`${prefix}_lastMonth`).innerHTML =
-        `上個月（${latest.year}/${latest.month}）：<b>${latest.count}</b> 件`;
+        `統計月份（${latest.year}/${latest.month}）：<b>${curr}</b> 件`;
 
-      document.getElementById(`${prefix}_prevYear`).innerHTML =
-        prevYearSameMonth
-          ? `前一年同月（${prevYearSameMonth.year}/${prevYearSameMonth.month}）：<b>${prevYearSameMonth.count}</b> 件，增減率：${formatChange(latest, prevYearSameMonth)}`
-          : `前一年同月：⚠ 無資料`;
+      // 2) ✅ 三前年同月平均（照你指定格式）
+      if (avg3y !== null && Number.isFinite(avg3y)) {
+        const y1 = latest.year - 3;
+        const y2 = latest.year - 1;
 
-      document.getElementById(`${prefix}_prevMonth`).innerHTML =
-        prevMonth
-          ? `同年前一月（${prevMonth.year}/${prevMonth.month}）：<b>${prevMonth.count}</b> 件，增減率：${formatChange(latest, prevMonth)}`
-          : `同年前一月：⚠ 無資料`;
-
-      if (prefix === "A2") {
-        const targetIndex = data.findIndex(d => d.year === target.year && d.month === target.month);
-        const recent = data.slice(Math.max(0, targetIndex - 11), targetIndex + 1);
-        const warnings = recent
-          .filter(d => d.count < 1000)
-          .map(d => `⚠️ 注意：${d.year} 年 ${d.month} 月 A2 類事故件數（${d.count}）可能因資料未完整上傳而偏低。`);
-        document.getElementById("A2_warning").innerHTML = warnings.join("<br>");
+        document.getElementById(`${prefix}_prev3yAvg`).innerHTML =
+          `前三年同月平均（${y1}~${y2}：平均 <b>${formatAvg(avg3y)}</b> 件） ` +
+          `${formatDeltaColored(curr, avg3y)}：${formatChangeBadge(curr, avg3y)}`;
+      } else {
+        document.getElementById(`${prefix}_prev3yAvg`).innerHTML =
+          `前三年同月平均：⚠ 無資料`;
       }
+
+
+      // 3) 前一月比較（含 +10 與膠囊百分比）
+      document.getElementById(`${prefix}_prevMonth`).innerHTML =
+        prev
+          ? `與前一月（${prev.year}/${prev.month}：<b>${prevCount}</b> 件）比較 ` +
+          `${formatDeltaColored(curr, prevCount)}：${formatChangeBadge(curr, prevCount)}`
+          : `與前一月比較：⚠ 無資料`;
+
     }
 
-    const t = getTargetMonth();
-    document.getElementById("note").innerText = `📅 本頁統計基準：${t.year}/${t.month}`;
+    //「增減多少」：取 1 位小數 + 上色
+    function formatDeltaColored(curr, base) {
+      if (!Number.isFinite(base)) return "";
 
-    Papa.parse("./A1_summary.csv", {
-      download: true,
-      header: true,
-      complete: function (results) {
-        processData(results.data, "A1");
-      }
-    });
+      // ⭐ 關鍵：先四捨五入到 1 位
+      const diff = +(curr - base).toFixed(1);
 
-    Papa.parse("./A2_summary.csv", {
-      download: true,
-      header: true,
-      complete: function (results) {
-        processData(results.data, "A2");
+      if (diff > 0) {
+        return `<span class="delta-up">+${diff.toFixed(1)}</span>`;
       }
-    });
+
+      if (diff < 0) {
+        return `<span class="delta-down">${diff.toFixed(1)}</span>`;
+      }
+
+      // ⭐ 真的等於 0 才進來
+      return `<span class="delta-zero">+0.0</span>`;
+    }
+
+    //「百分比 badge（通用版，前一月 & 三年平均都用）」
+    function formatChangeBadge(curr, base) {
+      if (!Number.isFinite(base) || base === 0)
+        return `<span class="badge zero">無資料</span>`;
+
+      const diff = curr - base;
+      const rate = (diff / base * 100).toFixed(1);
+
+      if (diff > 0) return `<span class="badge up">▲ ${rate}%</span>`;
+      if (diff < 0) return `<span class="badge down">▼ ${Math.abs(rate)}%</span>`;
+      return `<span class="badge zero">0.0%</span>`;
+    }
+
+    //小工具：顯示平均值（固定 1 位）
+    function formatAvg(v) {
+      if (!Number.isFinite(v)) return "無資料";
+      return v.toFixed(1);
+    }
+
+
+    function loadCSV(file, prefix) {
+      Papa.parse(file, {
+        download: true,
+        header: true,
+        complete: res => {
+          const data = res.data.map(d => ({
+            year: parseInt(d["發生年度"]),
+            month: parseInt(d["發生月份"]),
+            count: parseInt(d["台南市數量"])
+          })).filter(d => Number.isFinite(d.year) && Number.isFinite(d.month));
+
+          data.sort((a, b) => (a.year * 100 + a.month) - (b.year * 100 + b.month));
+          render(prefix, data);
+        }
+      });
+    }
+
+    const t = getTargetMonth(2);
+    document.getElementById("note").innerText =
+      `📅 指標統計基準：${t.year}/${t.month}（前兩個月）`;
+
+    loadCSV("./A1_summary.csv", "A1");
+    loadCSV("./A2_summary.csv", "A2");
+
+
+
   </script>
 </body>
 
